--- a/styles.css
+++ b/styles.css
@@ -196,3 +196,16 @@
   width: 100%;
   text-align: center;
 }
+
+.form-title {
+    font-size: 28px;
+    line-height: 35px;
+    text-align: center;
+}
+
+.form {
+  display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 2em;
+}
